Revised abstract and introduction

--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -5,6 +5,7 @@ author:
   affiliation: 
   - &EBI European Molecular Biology Laboratory, European Bioinformatics Institute, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, UK
   - &CRUK Cancer Research UK Cambridge Institute, University of Cambridge, Li Ka Shing Centre, Cambridge, CB2 0RE, UK
+  email: eling@ebi.ac.uk
 - name: Alan O'Callaghan
   affiliation: 
   - &MRC MRC Human Genetics Unit, Institute of Genetics \& Molecular Medicine, University of Edinburgh, Western General Hospital, Crewe Road, Edinburgh, EH4 2XU, UK
@@ -17,10 +18,10 @@ author:
   - *MRC 
   - The Alan Turing Institute, British Library, 96 Euston Road, London, NW1 2DB, UK
   email: catalina.vallejos@igmm.ed.ac.uk
-abstract: Cell-to-cell variability in gene expression is an inherent feature of biological systems. Single-cell RNA sequencing can be used to quantify this heterogeneity, but it is prone to strong technical noise. Here, we describe a computational workflow that uses the BASiCS Bioconductor package to robustly quantify cell-to-cell expression variability within and between known cell populations (e.g.~experimental conditions or cell types). We illustrate how BASiCS can identify highly and lowly variable genes within a cell population. Furthermore, we also show how BASiCS can highlight changes in gene expression variability between cell populations, while avoiding confounding effects related to technical noise or changes in overall abundance. Using publicly available datasets, we guide users through a complete pipeline which includes preliminary steps for quality control and data exploration using the scater Bioconductor package. Two case studies are described. The first uses data generated using the Fluidigm\@ C1 system, in which spike-in RNA molecules are used in order to quantify technical noise.The second dataset was generated using a droplet-based system, for which spike-in RNA is not available. The latter analysis provides an example in which differential variability testing reveals insights regarding a possible early cell fate commitment process. 
+abstract: Cell-to-cell variability in gene expression is an inherent feature of biological systems. Single-cell RNA sequencing can be used to quantify this heterogeneity, but it is prone to strong technical noise. Here, we describe a computational workflow that uses, among others, the BASiCS Bioconductor package to robustly quantify expression variability within and between known cell populations (e.g.~experimental conditions or cell types). Within a single homogeneous population of cells, BASiCS estimates interpretable gene- and cell-specific parameters that can be used for normalization and to identify highly and lowly variable genes. Furthermore, we also show how BASiCS can highlight changes in gene expression variability between cell populations, while avoiding confounding effects related to technical noise or changes in overall abundance. Using two publicly available datasets, we guide users through a complete pipeline which includes preliminary steps for quality control and data exploration using the scater and scran Bioconductor packages. Data for the first case study was generated using the Fluidigm\@ C1 system, in which spike-in RNA molecules are added in order to quantify technical noise. The second dataset was generated using a droplet-based system, for which spike-in RNA is not available. The latter analysis provides an example, in which differential variability testing reveals insights regarding a possible early cell fate commitment process. 
 
 #Abstracts should be up to 300 words and provide a succinct summary of the article. Although the abstract should explain why the article might be interesting, care should be taken not to inappropriately over-emphasise the importance of the work described in the article. Citations should not be used in the abstract, and the use of abbreviations should be minimized.
-keywords: Single-cell RNA sequencing, expression variability, noise, differential expression testing
+keywords: Single-cell RNA sequencing, expression variability, transcriptional noise, differential expression testing
 bibliography: BASiCSworkflow.bib
 output: BiocWorkflowTools::f1000_article
 #output:
@@ -46,43 +47,61 @@ knitr::opts_chunk$set(cache = 2, warning = FALSE, message = FALSE, error = FALSE
 
 # Introduction
 
-<!--- This paragraph: scRNA-Seq and the different types of heterogeneity --->
-<!--- Ref to clustering removed, as the focus is on the types of heterogeneity,
-not in the analysis. Check if @Rosenberg2018 reference is still relevant --> 
-Single-cell RNA-sequencing (scRNA-Seq) is the leading technology to study genome-wide transcriptional heterogeneity in cell populations that remains otherwise undetected in bulk experiments [@Stegle2015]. 
-Its applications range from uncovering novel cell types in immunity [@Lonnberg2017, @Villani2017] and development [@Ibarra-Soria2018a, @Wagner2018] to dissecting the mechanism 
-for cell-to-cell differences in expression [@Goolam2016] or understanding differentiation processes [@Proserpio2016]. 
+<!--- scRNA-Seq and the different types of heterogeneity --->
+Single-cell RNA-sequencing (scRNA-Seq) is the leading technology to study genome-wide transcriptional heterogeneity in cell populations that remains otherwise undetected in bulk experiments [@Stegle2015,@Prakadan2017,@Patange2018]. 
+Its applications range from characterising cell types in immunity [@Lonnberg2017, @Villani2017,@Zheng2017] and development [@Ibarra-Soria2018a,@Wagner2018,@Pijuan-Sala2019] to dissecting the mechanism for cell fate commitment events [@Goolam2016,@Ohnishi2014] . 
 Within a population of cells, transcriptional heterogeneity can be due a mixture of possible causes. 
-On the broadest level, this heterogeneity can reflect the presence of cell subtypes with distinct expression profiles *I would cite Kieselev NRG here*.
+On the broadest level, this heterogeneity can reflect the presence of cell subtypes with distinct expression profiles.
+In such cases, clustering strategies can be used to select individual cell types and cell states for individual analyses [@Kiselev2019].
 More subtle variation within a seemingly homogeneous cell population can be due to deterministic or stochastic events, the later being referred to as 'noise' [@Elowitz2002]. 
-<!--- edited until here ---> 
-Classically, extrinsic noise is defined as fluctuations in ... differences in dynamic states (cell size, cell cycle, metabolism, intra- and inter-cellular signalling) while intrinsic noise effects single promoters via mutations, epigenetic modifications and nucleosome positioning [@Faure2017, @Eberwine2015].
-However, *Describe molecular phenotypic variability here...*
 
-<!--- This paragraph: technical noise, normalisation and hvg/lvg analyses ---> 
-Moreover, technical noise inflates the overall variability in gene expression [@Brennecke2013].
-To account for high amounts of technical noise that affects scRNA-seq data, external RNA spike-in molecules (ERCCs) [@Rna2005] can be added to the experiment before sequencing. 
-Fitting the variance-mean dependency of the ERCCs allows the statistical detection of genes with higher dispersion in expression than the technical background [@Brennecke2013]. 
-This idea has been expanded to estimate cell specific normalisation factors in parallel within the BASiCS model. 
-Total variability can be decomposed into a technical and biological part by incorporating ERCC reads [@Vallejos2015]. 
+<!--- Transcriptional noise and molecular phenotypic variability--->
+Classically, extrinsic noise is defined as stochastic fluctuations in cellular components, which is induced by cells residing in different dynamic states (cell size, cell cycle, metabolism, intra- and inter-cellular signalling) [@Zopf2013,@Iwamoto2016,@Kiviet2014]. 
+Intrinsic noise on the other hand arises from stochastic effects on biochemical processes such as transcription and translation [@Elowitz2002]. 
+It can be modulated by genetic and epigenetic modifications (such as mutations, histone modifications, CpG island length and nucleosome positioning) [@Eberwine2015,@Faure2017,@Morgan2018] and is usually measured on the single-gene level [@Elowitz2002]. 
+However, the observed cell-to-cell variability in gene expression or protein abundance arise from a combination of intrinsic and extrinsic noise, and determnisitic contributions to cell state differences in cell populations.
+Therefore, scRNA-Seq only allows to capture the molecular pehnotypic variability within cell populations, rather than the individual noise components [@Patange2018,@Ecker2017a]. 
+Here, the molecular phenotype is defined via the absolute abundance of intracellular molecules, such as transcripts, proteins, metabolites, etc.
 
-<!--- This paragraph: differential analyses ---> 
-Since the era of bulk RNA sequencing, methods for differential expression testing of transcript counts across two conditions have been developed [@Anders2010;@Robinson2009]. 
-Due to zero inflation in scRNA-seq data, new approaches were developed for differential expression testing in scRNA-seq data [@Katayama2013;@Kharchenko2014;@Delmans2016]. 
-In contrast to bulk samples, scRNA-seq allows the characterization of gene expression variability across a population of cells. 
-To compare changes in transcriptional variability, the BASiCS package has been expanded to include differential mean expression and differential variability testing. 
-In this setting, BASiCS uses the over-dispersion after correcting for technical noise as proxy for biolgocial variability [@Vallejos2016a]. 
-Due to a strong confounding between mean expression and over-dispersion, BASiCS has been extended to model this relationship and capture residual over-dispersion estimates that show no correlation to mean expression. 
-Therefore, it is possible to test changes in mean expression in parallel to changes in variability [@Eling2018]. 
+<!--- Technical noise, normalisation and hvg/lvg analyses ---> 
+Moreover, technical noise inflates the observed cell-to-cell variability in gene expression [@Brennecke2013].
+To account for high amounts of technical noise that affects scRNA-seq data, external RNA spike-in molecules (such as the ones introduced by the External RNA Controls Consortium, ERCCs [@Rna2005]) can be added to the experiment before sequencing. 
+Fitting a regression trend between the variability and the mean abundance of the ERCC molecules allows the statistical detection of genes the show larger variability than the technical background [@Brennecke2013]. 
+Genes that show larger variability compared to spike-in molecules or the average variability are often referred to as 'highly variable genes' (HVG) and are used in computational scRNA-Seq analysis to select biologically informative genes for down-stream analysis [@Lun2016].
+Furthermore, spike-in molecules can be used to normalize gene expression for cells with differences in total mRNA content.
 
-<!--- This paragraph: outline ---> 
+<!--- BASiCS --->
+To address these technical issues, the `Biocpkg("BASiCS")` Bioconductor package estimates gene- and cell-specific model parameters that can be used to, for example, normalize raw scRNA-Seq counts and to detect highly and lowly variabe genes [@Vallejos2015BASiCS]. 
+`BASiCS` is a hierarchical Bayesian framework that propagates statistical uncerstainty into down-stream analysis and allows the decomposition of total variance into a biological and technical part by incorporating spike-in reads [@Vallejos2015]. 
+Furthermore, `BASiCS` has been extended to perform differential mean expression and differential variability testing [@Vallejos2016a].
+
+<!--- Differential analyses ---> 
+Since the era of RNA sequencing, methods for differential expression testing of transcript counts across two conditions have been developed [@Anders2010;@Robinson2009]. 
+Due to high technical variability and sparsity in scRNA-seq data, new approaches were developed for differential expression testing specifically for scRNA-seq data [@Katayama2013;@Kharchenko2014;@Delmans2016]. 
+In contrast to bulk samples, scRNA-seq measures variations in gene expression across a population of cells and can therefore be used to test for changes in expression variability between two conditions. 
+For this, `BASiCS` compares the gene-specific over-dispersion parameters between two conditions. 
+These parameters are independent of technical noise and can be used as proxy for biolgocial variability [@Vallejos2016a]. 
+Similar to the mean-variability trend observed for normalized scRNA-Seq data [@Brennecke2015], the estimates for over-dispersion parameters decrease with mean expression [@Vallejos2016a].
+To correct for this, BASiCS has been extended to model the mean-variability relationship and capture residual over-dispersion estimates that show no association to mean expression. 
+Therefore, this extension allows to test changes in mean expression in parallel to changes in variability [@Eling2018]. 
+
+<!--- Outline ---> 
 Here we present a computational workflow for differential expression and differential variability testing of scRNA-seq data using the previously published BASiCS package [@Vallejos2015;@Vallejos2016a;@Eling2017] implemented in the statistical computing language R. 
+We highlight the use of the `Biocpkg("scater")` and `Biocpkg("scran")` Bioconductor packages to perform initial quality control and low-level analysis [@McCarthy2017,@Lun2016], which is comparable to analyses performed using `BASiCS`.
+Two case studies exemplify the use of `BASiCS` for non-UMI and UMI scRNA-Seq data.
+In the first case, `BASiCS` can be used to detect highly and lowly variable genes and to obtain robust, gene-specific estimates to assess biological variability in naive CD4^+^ T cells [@Martinez-jimenez2017] (for a similar workflow see [@Kim2019]).
+Furthermore, we compare naive to activated CD4^+^ T cells to highlight the use of `BASiCS` to test for changes in mean expression and expression variability.
+In the second case, we use droplet-based scRNA-Seq data to detect more subtle transcriptional changes during embryonic somitogenesis [@Ibarra-Soria2018]
+
+## Outline
+
 The analysis starts with a raw transcript counts matrix after removal of low-quality cells. 
-A full quality control process is explained elsewhere [@McCarthy2017].
 We will first focus on gene filtering, generating a SingleCellExpression object to use within BASiCS, and explain how to run and validate the convergence of Markov-Chain Monte Carlo simulations.
 Additionally, we will use two examples (Cel-Seq [@Grun2014] and droplet-based scRNAseq data [@Ibarra-Soria2018]) to exemplify statistical detection of highly variable, differentially expressed and differentially variable genes in different conditions. 
 
-*Discuss and cite similar workflows: scran, Mark Robinson, the chapter/workflow that Kim published*
+**Mike Love, Charlotte Sonesone, Rob Patron**
+**We explain the workflow outline.**
+**This has to be very easy to understand.**
 
 # Methods
 
@@ -91,12 +110,6 @@ Additionally, we will use two examples (Cel-Seq [@Grun2014] and droplet-based sc
 - Explain scater for preprocessing (highlight: QC, pre-normalization and visualization)
 - scran for alternative measures e.g. DM and CV2 calculation
 - GO analysis
-
-## Outline
-
-**Mike Love, Charlotte Sonesone, Rob Patron**
-**We explain the workflow outline.**
-**This has to be very easy to understand.**
 
 ## Operation
 
@@ -892,8 +905,7 @@ Test_DE <- BASiCS_TestDE(Chain1 = MCMC.naive,
                          Chain2 = MCMC.active, 
                          EpsilonM = log2(2),
                          GroupLabel1 = "Naive", 
-                         GroupLabel2 = "Active", 
-                         EFDR_M = 0.1,
+                         GroupLabel2 = "Active",
                          Plot = FALSE,
                          PlotOffset = FALSE,
                          GenesSelect = genes_select)
@@ -989,7 +1001,6 @@ Test_DE.LFC0 <- BASiCS_TestDE(Chain1 = MCMC.naive,
                               EpsilonM = 0,
                               GroupLabel1 = "Naive", 
                               GroupLabel2 = "Active", 
-                              EFDR_M = 0.1,
                               Plot = FALSE,
                               PlotOffset = FALSE,
                               GenesSelect = genes_select)
@@ -1034,14 +1045,14 @@ ess.active.mu <- coda::effectiveSize(coda::mcmc(displayChainBASiCS(MCMC.active, 
 ind_ess.active.mu <- ess.naive.mu > 100
 
 # Low ESS for delta
-ess.naive.delta <- coda::effectiveSize(coda::mcmc(displayChainBASiCS(MCMC.naive, "delta")))
-ind_ess.naive.delta <- ess.naive.mu > 100
-ess.active.delta <- coda::effectiveSize(coda::mcmc(displayChainBASiCS(MCMC.active, "delta")))
-ind_ess.active.delta <- ess.naive.mu > 100
+ess.naive.epsilon <- coda::effectiveSize(coda::mcmc(displayChainBASiCS(MCMC.naive, "epsilon")))
+ind_ess.naive.epsilon <- ess.naive.mu > 100
+ess.active.epsilon <- coda::effectiveSize(coda::mcmc(displayChainBASiCS(MCMC.active, "epsilon")))
+ind_ess.active.epsilon <- ess.naive.mu > 100
 
 # Genes to exclude
-to_exclude <- low_expr & ind_ess.naive.mu & 
-  ind_ess.active.mu & ind_ess.naive.delta & ind_ess.active.delta
+genes_select <- low_expr & ind_ess.naive.mu & 
+  ind_ess.active.mu & ind_ess.naive.epsilon & ind_ess.active.epsilon
 ```
 
 We can now perform the differential testing as shown above.
@@ -1053,9 +1064,7 @@ Test_DE <- BASiCS_TestDE(Chain1 = MCMC.naive,
                          Chain2 = MCMC.active, 
                          EpsilonM = log2(2),
                          GroupLabel1 = "Naive", 
-                         GroupLabel2 = "Active", 
-                         EFDR_M = 0.1,
-                         EFDR_D = 0.1,
+                         GroupLabel2 = "Active",
                          Plot = FALSE,
                          PlotOffset = FALSE,
                          GenesSelect = genes_select)
@@ -1103,7 +1112,7 @@ For this, we will first collect all immune response genes (GO category: `GO:0006
 ```{r variable-immune-response}
 # Select immune response genes
 immun.allegs <- get("GO:0006955", org.Mm.egGO2ALLEGS)
-immun.genes <- unique(unlist(mget(cyt.allegs, org.Mm.egENSEMBL)))
+immun.genes <- unique(unlist(mget(immun.allegs, org.Mm.egENSEMBL)))
 immun.names <- genenames[immun.genes,"external_gene_name"]
 ```
 
